--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ logging.level.com.management.admin=debug
 
 mybatis.mapper-locations=classpath:/mappings/*.xml
 
+spring.data.mongodb.host=47.107.33.13
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=survey
