--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=123456
 spring.jackson.date-format=yyyy/MM/dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-logging.level.com.management.admin=debug
+logging.level.bit.ss.surveysystem=Debug
 
 mybatis.mapper-locations=classpath:/mappings/*.xml
 
