--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ server.port=8666
 
 #切换远程、本地数据库
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.107.33.13/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.username=wang
-#spring.datasource.username=root
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://47.107.33.13/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+#spring.datasource.username=wang
+spring.datasource.username=root
+spring.datasource.password=yuzhenjie11
 
 spring.jackson.date-format=yyyy/MM/dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
@@ -15,6 +15,6 @@ logging.level.bit.ss.surveysystem=Debug
 
 mybatis.mapper-locations=classpath:/mappings/*.xml
 
-spring.data.mongodb.host=47.107.33.13
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=survey
