--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8666
 
 #切换远程、本地数据库
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://47.107.33.13/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.url=jdbc:mysql://localhost:3306/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://49.233.54.160/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/analysis_platform?useSSL=false&serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 #spring.datasource.username=wang
 spring.datasource.username=root
 spring.datasource.password=yuzhenjie11
@@ -15,6 +15,11 @@ logging.level.bit.ss.surveysystem=Debug
 
 mybatis.mapper-locations=classpath:/mappings/*.xml
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=49.233.54.160
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=survey
+#
+#server.ssl.key-store=classpath:wxxyx.m0yuqi.cn.jks
+#server.ssl.key-store-password=q1kt8vfq615a644
+#server.ssl.key-store-type=JKS
+#server.ssl.key-alias=tomcat
